--- a/charging-bull/package.json
+++ b/charging-bull/package.json
@@ -5,19 +5,20 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "npm-run-all --parallel start playground",
+    "dev": "ts-node-dev src/index.ts",
     "playground": "graphql playground"
   },
   "keywords": [],
   "author": "Devan Beitel",
   "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "1.16.2"
+    "graphql-yoga": "1.16.2",
+    "ts-node": "^7.0.1"
   },
   "devDependencies": {
     "graphql-cli": "2.16.7",
     "npm-run-all": "4.1.3",
-    "ts-node": "6.2.0",
+    "ts-node-dev": "^1.0.0-pre.30",
     "typescript": "2.9.2"
   }
 }
