--- a/fearless-girl/package.json
+++ b/fearless-girl/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-jss": "^8.6.1",
     "react-scripts-ts": "2.17.0",
+    "recompose": "^0.30.0",
     "serve": "^10.0.1"
   },
   "scripts": {
