--- a/fearless-girl/package.json
+++ b/fearless-girl/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.1.0",
+    "@types/graphql": "^14.0.0",
+    "apollo-boost": "^0.1.16",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.5.2",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.5.2",
     "react-jss": "^8.6.1",
     "react-scripts-ts": "2.17.0",
