--- a/fearless-girl/package.json
+++ b/fearless-girl/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.1.0",
-    "@types/graphql": "^14.0.0",
     "apollo-boost": "^0.1.16",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
@@ -23,10 +22,13 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.0",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.10.1",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/react-jss": "^8.6.0",
+    "@types/recompose": "^0.26.5",
     "typescript": "^3.0.3"
   }
 }
