--- a/charging-bull/package.json
+++ b/charging-bull/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "graphql-yoga": "1.16.2",
+    "iex-api": "^0.0.3",
+    "isomorphic-fetch": "^2.2.1",
     "ts-node": "^7.0.1"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.34",
     "graphql-cli": "2.16.7",
     "npm-run-all": "4.1.3",
     "ts-node-dev": "^1.0.0-pre.30",
